--- a/SysConect.tex
+++ b/SysConect.tex
@@ -12,7 +12,7 @@
 	\node (app) [above left=1cm and 3cm of fram] {Mobble Aplication};
 	\node (web) [above=of fram] {Web Aplication};
 	\node (email) [above right=1cm and 3cm of fram] {Emails \& Reports};
-	\node (db) [below=of fram] {Databace};
+	\node (db) [below=1.5cm of fram] {Databace};
 	
 	\path[every node/.style={font=\sffamily}]
 	  (fram) edge[thick,->,bend right=10,->] node[midway,above]  {Get}  (app)
