--- a/seting_etc.tex
+++ b/seting_etc.tex
@@ -16,6 +16,7 @@
 \usepackage{array}
 \usepackage{hhline}
 \usepackage{helvet}
+%\usepackage[backend=bibtex]{biblatex}
 \renewcommand{\familydefault}{\sfdefault}
 \usetikzlibrary{shapes.geometric,arrows,automata,calc,shapes, positioning}
 
