--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -94,23 +94,23 @@
 			\item Verify Standards:\\
 			In order to Ensure Compliance with all pertinent safety regulations the system must be able to check the and verify that all the stranded are being upheld in the various locations and across the numerous safety devices.
 			\item Keep Records:\\
-			In order to ensure that all of the safety laws and regulations are fallowed we mus keep records of all the locations witch must have safety equipment present in a building, what safety equipment must be present, and how to verrify that it is in working condition.  
+			In order to ensure that all of the safety laws and regulations are followed we must keep records of all the locations which must have safety equipment present in a building, what safety equipment must be present, and how to verrify that it is in working condition.  
 
 			\item Other 
 		\end{itemize}
 		From the secondary function Keep Records we have derived: 
 		\begin{itemize}
 			\item Generate Reports:\\
-			In order to keep records and ensure that every location and item is in compliance the system must be able to generate reports on any set of data on witch record are kept. 
+			In order to keep records and ensure that every location and item is in compliance the system must be able to generate reports on any set of data on which record are kept. 
 		\end{itemize}
 		From the secondary function Verify Standers we have derived:
 		\begin{itemize}
 			\item Set Requirements:\\
-			In order to Verify Standers the system must be able to set complacence requirements for each location and item witch is being tracked by the system.
+			In order to Verify Standers the system must be able to set complacence requirements for each location and item which is being tracked by the system.
 			\item Set Responsibility:\\
 			In order to Verify Standers the standers are being upheld a person must be assigned Responsibility for a number of locations and items within the system. Once this Responsibility is set the owner can be held accountably for there set of locations and items. 
 			\item Schedule Checklists:\\
-			so that Standers are verified  checklists should be generated to show those who are responsible for items witch items need to be checked to ensure compliance.
+			so that Standers are verified  checklists should be generated to show those who are responsible for items which items need to be checked to ensure compliance.
 		\end{itemize}
 		
 	\subsection{Use example}
@@ -125,12 +125,12 @@
 \section{Technical Design}
 	
 	\subsection{Mobil Application}
-	Design team 3 will build a Mobile application for a tablet device witch will allow a user to: download a database of safety equipment and locations to the mobile device to allow the user to operate with out access to the intranet, scan bar codes of locations and safety devices to allow the user to answer a seres of pass fail inspection questions, push question responses back to the database over the sponcers intranet.
+	Design team 3 will build a Mobile application for a tablet device which will allow a user to: download a database of safety equipment and locations to the mobile device to allow the user to operate with out access to the intranet, scan bar codes of locations and safety devices to allow the user to answer a seres of pass fail inspection questions, push question responses back to the database over the sponcers intranet.
 	\subsubsection{Mobil User Interface \& Experience}
 	Desing Team three has comitiond the world renowned user interface and user expereance designer, Trevor Sabo to design a front end for both our moble and web applications.\\
 	\\
 	Design Team three will create a user interface and expereance(UI/UX) to guide the safety inspector through the proses of an inspection Figure~\ref{fig:login} the user is prompted to enter three payroll number so that the data reverent to that user can be sync to the noble device and so that the inspection results can be logged under the correct employees name.
-	If the users device is connected to the intranet will depress the button labeled sync in Figure~\ref{fig:splash} witch will retreve the inspection locations and safety device information pertinent to the user.
+	If the users device is connected to the intranet will depress the button labeled sync in Figure~\ref{fig:splash} which will retreve the inspection locations and safety device information pertinent to the user.
 	Once the inspector reaches a location they will depress the Scan Barcode Location button shown in Figure~\ref{fig:splash}
 	\begin{figure}[h]
 		
@@ -161,7 +161,7 @@
 			Design Team 3s sponsor Arcelormittal USA uses a Microsoft windows baced infistrutur for its internal IT. This is significant because  most of the Internet and so most of the web frameworks are built around UNIX like operationg systems such as Linux or free BSD, While manny have been built to work in a windows environment we must deterin if that exists and if so how well.
 			
 			\item \textbf{Documentation}\\
-			One of the most important parts of any software library is the documentation, If a developer is required to dig thou source code to determine how a library works because there is no documentation witch shows how to use it the amount of time witch will be required will increse exponetoly and will result in code witch is more prow to Constantine defects.
+			One of the most important parts of any software library is the documentation, If a developer is required to dig thou source code to determine how a library works because there is no documentation which shows how to use it the amount of time which will be required will increse exponetoly and will result in code which is more prow to Constantine defects.
 				
 			\item \textbf{Ease Of use} \\
 			The complexity of a framework can be quite large and part of that can be in the langige the framework is writing in. this requires Design Team 3 to determine how difficult stranded tasks such as serving a web parge, and dynamically creating content. By looking at slandered task the overall difficulty of building the full web application will be.	
@@ -180,7 +180,7 @@
 		\end{itemize}
 		\end{minipage}\\
 		\\
-		Then we chose from the plethora of existing frameworks seven witch are cominly used in web app development to compare agents these requirements. The each criteria is marked on a log scale of ether 1,3, or 9 and displayed in Table~\ref{WebMatrix}.
+		Then we chose from the plethora of existing frameworks seven which are cominly used in web app development to compare agents these requirements. The each criteria is marked on a log scale of ether 1,3, or 9 and displayed in Table~\ref{WebMatrix}.
 		
 		\begin{itemize}
 			\item \textbf{Ruby on Rails} \\
@@ -188,7 +188,7 @@
 			\item \textbf{Django} \\
 			Django is a python one the most popular web frameworks and is built in python. Django is well sported out of the box with numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add interesting fetchers.
 			\item \textbf{Play} \\
-			Play is a Java Web framework. This framework as a large apeal for us as we will be writeing our androide aplication in java, and there is a huge amount of support for the leanguige witch would be helpful
+			Play is a Java Web framework. This framework as a large apeal for us as we will be writeing our androide aplication in java, and there is a huge amount of support for the leanguige which would be helpful
 			\item  \textbf{Express}\\
 			Express is a Node.js Web application framework.
 			\item \textbf{Laravel} \\
@@ -229,7 +229,7 @@
 The only cost incured by the design team will be purchasing a nexus 7 tablet of the same model year or smiler the sponsors devices due to there security measures we are un able to use one of the sponsor owns devises. untill such time as one can be procured, a group member has volunteered there nexus7 tablet to be used.
 \part{Project Management}
 \section{Scheduling}
-		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planed to address a number of the design requirements witch must be develop in or near parallel do to the highly interconnected nature of the individual subsystems. 
+		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planed to address a number of the design requirements which must be develop in or near parallel do to the highly interconnected nature of the individual subsystems. 
 		
 		
 	\subsection{Preliminary Set up}\label{cyc1}
@@ -255,7 +255,7 @@ The only cost incured by the design team will be purchasing a nexus 7 tablet of 
 			In this task a team member will draw the initial designs for the user experiences that will be had in the various user portals of the system so that the project sponsor can have an idea of what the user interface will be like and can give us insights that will help all aspects of the teams design. 
 			
 			\item\textbf{Set up Web Page:} (Seth)\\
-			In this task a team member will setup an initial front end for the administrator web sight. The team member will decide on a set of predefined web objects that can be used to build web applications witch will best allows the team to build an effective web application front end. 
+			In this task a team member will setup an initial front end for the administrator web sight. The team member will decide on a set of predefined web objects that can be used to build web applications which will best allows the team to build an effective web application front end. 
 			
 			\item\textbf{Ask Clarifying questions for sponsor:} (The Team)\\
 			After facing the initial feasibility challenges involved in the building the main subsystem of the project the team will compile the design report and a number of clarifying questions for the sponsor in order to further refine the teams initial design decisions. 
