ally you so good at this

--- a/title.tex
+++ b/title.tex
@@ -38,7 +38,7 @@
 		%----------------------------------------------------------------------------------------
 		
 		\textsc{\LARGE Michigan State University}\\[0.5cm] % Name of your university/college
-		\textsc{\Large Department Of Electrical and Computer Engeinring}\\[0.5cm] % Major heading such as course name
+		\textsc{\Large Department Of Electrical and Computer Engineering}\\[0.5cm] % Major heading such as course name
 		%\textsc{\large smaller big text}\\[0.5cm] % Minor heading such as course title
 		\textsc{\Large ECE 480 Senior Design}\\[0.5cm]
 		
@@ -47,7 +47,7 @@
 		%----------------------------------------------------------------------------------------
 		
 		\HRule \\[0.2cm]
-		{ \huge \bfseries Project Proposal\\ Arcelormittal USA\\ Safety Equipment Bar Code Scanne}\\[0.2cm] % Title of your document
+		{ \huge \bfseries Project Proposal\\ ArcelorMittal USA\\ Safety Equipment Bar Code Scanner}\\[0.2cm] % Title of your document
 		\HRule \\[1.5cm]
 		
 		%----------------------------------------------------------------------------------------
