ally is the real mvp

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -188,15 +188,15 @@
 			\item \textbf{Django} \\
 			Django is a python one the most popular web frameworks and is built in python. Django is well sported out of the box with numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add interesting fetchers.
 			\item \textbf{Play} \\
-			Play is a Java Web framework. This framework as a large apeal for us as we will be writeing our androide aplication in java, and there is a huge amount of support for the leanguige which would be helpful
+			Play is a Java Web framework. This framework as a large appeal for us as we will be writing our Android Application in Java, and there is a huge amount of support for the language which would be helpful
 			\item  \textbf{Express}\\
 			Express is a Node.js Web application framework.
 			\item \textbf{Laravel} \\
-			Laravel Is a popular PHP baced web framework
+			Laravel Is a popular PHP based web framework
 			\item \textbf{Revel} \\
-			Revel is the go languige web framework. As with menny things in go there is one right way to do something and this is it.
+			Revel is the go language web framework. As with menny things in go there is one right way to do something and this is it.
 			\item \textbf{TurboGears}
-			Next generation python web framework. Taking ques from frameworks like Dajango and Rails this framework uses advanced python and other langiges to build a web app.
+			Next generation python web framework. Taking cues from frameworks like Django and Rails this framework uses advanced python and other languages to build a web app.
 		\end{itemize}
 		
 		
@@ -226,7 +226,7 @@
 		
 	
 \part{Cost}
-The only cost incured by the design team will be purchasing a nexus 7 tablet of the same model year or smiler the sponsors devices due to there security measures we are un able to use one of the sponsor owns devises. untill such time as one can be procured, a group member has volunteered there nexus7 tablet to be used.
+The only cost incurred by the design team will be purchasing a Nexus 7 tablet of the same model year or simillar the sponsors devices due to their security measures we are un-able to use one of the sponsor owns devises. untill such time as one can be procured, a group member has volunteered there nexus7 tablet to be used.
 \part{Project Management}
 \section{Scheduling}
 		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planed to address a number of the design requirements which must be develop in or near parallel do to the highly interconnected nature of the individual subsystems. 
