--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -226,18 +226,18 @@
 		
 	
 \part{Cost}
-The only cost incurred by the design team will be purchasing a Nexus 7 tablet of the same model year or simillar the sponsors devices due to their security measures we are un-able to use one of the sponsor owns devises. untill such time as one can be procured, a group member has volunteered there nexus7 tablet to be used.
+The only cost incurred by the design team will be purchasing a Nexus 7 tablet. The tablet will be of the same model and year or similar to the sponsor's devices.  Due to their security measures, we are unable to use one of the sponsor owns devices. To speed up the process of development, a group member has volunteered their Nexus 7 tablet to be used.
 \part{Project Management}
 \section{Scheduling}
 		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planed to address a number of the design requirements which must be develop in or near parallel do to the highly interconnected nature of the individual subsystems. 
 		
 		
-	\subsection{Preliminary Set up}\label{cyc1}
+	\subsection{Preliminary Set Up}\label{cyc1}
 		In the first cycle the team pursues actions which move to the understanding of the finer details of the system it has been tasked to build. This cycle includes several instances of contact with the sponsor in order to both better understand the customers needs and build a relationship for ongoing communication. At the end of this cycle the team will deliver a project proposal to the faculty advisor and the project sponsor along with having verified that the most basic functionality of the database, web application, Android application and design mock-ups. 
 		
 		\begin{itemize}
 			\item\textbf{Meet with Sponsor:} (The Team)\\
-			The team prepares questions and meets in person with the Jim Lang from ArcelorMittal. In order to better understand the needs layed out in the project description. In this meeting the project sponsor was asked to describe key features and  what a successfully project looked like was discussed.
+			The team prepares questions and meets in person with the Jim Lang from ArcelorMittal. In order to better understand the needs defined in the project description. In this meeting the project sponsor was asked to describe key features and furthermore, what a successfully project looked like.
 			
 			\item \textbf{Solidify Understanding of Project:} (The Team)\\
 			In this task the Team meets to discuss what was learned in the meeting with the project sponsor previously. In order to layout the framework in which the team can build the requested system.
@@ -273,7 +273,7 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet of
 			
 			\item\textbf{Demonstrate to Sponsor:}\\
 			
-			\item\textbf{Mock ups and wireframes:}\\
+			\item\textbf{Mock ups and Wire Frames:}\\
 			
 		\end{itemize}
 		
