--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -21,6 +21,14 @@
 		\end{enumerate}
 	\end{abstract}
 	
+
+\part{Overview of Customer's Requirements}
+\section{ Background Research}
+	There is background research that needs to be implemented to characterize primary hardware and software components that are needed for a successful project.
+	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team 3 has picked our sponsor, Jim Lang, to be our primary point of contact for all things about the "super user". Jim clearly defines what ArcelorMittal needs, and how the user will be interacting with our system. To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. 
+	With customer needs comes design constraints. One design constraint is time. We have been given one semester to work on this system. Another constraint is going to be cost. We have been given a budget of 500\$ to create this system. 
+	Criteria for feasibility of design includes the amount of skill asked to complete a design. As undergraduate computer engineers, we are not equipped to create systems that are very mechanical, or that would include advanced computer programming principles. The importance of creating a system that we know we have the skills to do so is very crucial to successful completion of the barcode scanner.   
+
 \part{Technical}
 \section{Project Definition}\label{def}
 	This team has been assigned an industry sponsored project from ArcelorMittal USA, who need a way to track their industrial safety equipment within their buildings In order to build the specified system Team 6 will need to build three primary systems. The first being an Android application for operators to scan bar codes on safety locations and equipment. A web application to allow administrators to specify questions for specific pieces of safety equipment, and furthermore assign responsibility to workers. Finally a server infrastructure will be created to ensure data is held properly and securely, host the web application, connect to the Android app, and generate reports. 
@@ -94,7 +102,7 @@
 			\item Verify Standards:\\
 			In order to Ensure Compliance with all pertinent safety regulations the system must be able to check the and verify that all the stranded are being upheld in the various locations and across the numerous safety devices.
 			\item Keep Records:\\
-			In order to ensure that all of the safety laws and regulations are followed we must keep records of all the locations which must have safety equipment present in a building, what safety equipment must be present, and how to verrify that it is in working condition.  
+			In order to ensure that all of the safety laws and regulations are followed we must keep records of all the locations which must have safety equipment present in a building, what safety equipment must be present, and how to verify that it is in working condition.  
 
 			\item Other 
 		\end{itemize}
@@ -124,7 +132,7 @@
 		
 \section{Technical Design}
 	
-	\subsection{Mobil Application}
+	\subsection{Mobile Application}
 	Design team 3 will build a Mobile application for a tablet device which will allow a user to: download a database of safety equipment and locations to the mobile device to allow the user to operate with out access to the intranet, scan bar codes of locations and safety devices to allow the user to answer a seres of pass fail inspection questions, push question responses back to the database over the sponcers intranet.
 	\subsubsection{Mobil User Interface \& Experience}
 	Desing Team three has comitiond the world renowned user interface and user expereance designer, Trevor Sabo to design a front end for both our moble and web applications.\\
@@ -184,9 +192,9 @@
 		
 		\begin{itemize}
 			\item \textbf{Ruby on Rails} \\
-			Ruby on Rails is a web framework named Rails built in the languid Ruby and is comily referd to as Ruby on Rails. 
+			Ruby on Rails is a web framework also known as Rails built in the programming language Ruby. 
 			\item \textbf{Django} \\
-			Django is a python one the most popular web frameworks and is built in python. Django is well sported out of the box with numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add interesting fetchers.
+			Django is a Python built framework and is one the most popular web frameworks. Django is well sported out of the box with numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add interesting fetchers.
 			\item \textbf{Play} \\
 			Play is a Java Web framework. This framework as a large appeal for us as we will be writing our Android Application in Java, and there is a huge amount of support for the language which would be helpful
 			\item  \textbf{Express}\\
@@ -194,7 +202,7 @@
 			\item \textbf{Laravel} \\
 			Laravel Is a popular PHP based web framework
 			\item \textbf{Revel} \\
-			Revel is the go language web framework. As with menny things in go there is one right way to do something and this is it.
+			Revel is the go language web framework. As with many things in go there is one right way to do something and this is it.
 			\item \textbf{TurboGears}
 			Next generation python web framework. Taking cues from frameworks like Django and Rails this framework uses advanced python and other languages to build a web app.
 		\end{itemize}
@@ -311,7 +319,7 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 		\begin{landscape}
 			\begin{figure}
 				\input{gantChart.tex}
-				\caption{\label{fig:gant}Gant Chart}
+				\caption{\label{fig:gant}Gantt Chart}
 			\end{figure}
 		\end{landscape}
 	
