one more homieshh

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -23,11 +23,15 @@
 	
 
 \part{Overview of Customer's Requirements}
-\section{ Background Research}
-	There is background research that needs to be implemented to characterize primary hardware and software components that are needed for a successful project.
+\section{Background Research}\label{resarch}
+	There is background research that needs to be implemented to characterize primary hardware and software components that are needed for a successful project. \\
 	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team 3 has picked our sponsor, Jim Lang, to be our primary point of contact for all things about the "super user". Jim clearly defines what ArcelorMittal needs, and how the user will be interacting with our system. To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. 
-	With customer needs comes design constraints. One design constraint is time. We have been given one semester to work on this system. Another constraint is going to be cost. We have been given a budget of 500\$ to create this system. 
-	Criteria for feasibility of design includes the amount of skill asked to complete a design. As undergraduate computer engineers, we are not equipped to create systems that are very mechanical, or that would include advanced computer programming principles. The importance of creating a system that we know we have the skills to do so is very crucial to successful completion of the barcode scanner.   
+	With customer needs comes design constraints. One design constraint is time. We have been given one semester to work on this system. Another constraint is going to be cost. We have been given a budget of 500\$ to create this system.\\ 
+	Criteria for feasibility of design includes the amount of skill asked to complete a design. As undergraduate computer engineers, we are not equipped to create systems that are very mechanical, or that would include advanced computer programming principles. The importance of creating a system that we know we have the skills to do so is very crucial to successful completion of the barcode scanner.  
+	Criteria that can be used to rank feasible designs is going to be time. How much time does the proposed action take? 
+
+\section{High Level Languages}\label{highlevel}
+
 
 \part{Technical}
 \section{Project Definition}\label{def}
