--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -25,10 +25,19 @@
 \part{Overview of Customer's Requirements}
 \section{Background Research}\label{resarch}
 	There is background research that needs to be implemented to characterize primary hardware and software components that are needed for a successful project. \\
-	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team 3 has picked our sponsor, Jim Lang, to be our primary point of contact for all things about the "super user". Jim clearly defines what ArcelorMittal needs, and how the user will be interacting with our system. To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. 
+	\subsection{Assessing Customer Needs}
+	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team 3 has picked our sponsor, Jim Lang, to be our primary point of contact for all things about the "super user". Jim clearly defines what ArcelorMittal needs, and how the user will be interacting with our system. Jim has made it easy to contact him by both a personal telephone number, and emailing at any time of day.  To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. In addition we can measure how much more accurate our system is over their previous design. \\ 
+	\subsection{Design Constraints}
 	With customer needs comes design constraints. One design constraint is time. We have been given one semester to work on this system. Another constraint is going to be cost. We have been given a budget of 500\$ to create this system.\\ 
-	Criteria for feasibility of design includes the amount of skill asked to complete a design. As undergraduate computer engineers, we are not equipped to create systems that are very mechanical, or that would include advanced computer programming principles. The importance of creating a system that we know we have the skills to do so is very crucial to successful completion of the barcode scanner.  
-	Criteria that can be used to rank feasible designs is going to be time. How much time does the proposed action take? 
+	\subsection{Feasibility of Designs}
+	Criteria for feasibility of design includes the amount of skill asked to complete a design. As undergraduate computer engineers, we are not equipped to create systems that are very mechanical, or that would include advanced computer programming principles (which would be better suited for graduate students in our field). The importance of creating a system that we know we have the skills to do so is very crucial to successful completion of the barcode scanner.  \\
+	Criteria that can be used to rank feasible designs is going to be time. How much time does the proposed action take? How well is the proposed design documented? Solutions supporting simple, easy to read documentation is preferred by team 3. \\
+	Trade off studies that need be conducted to assess the above concerns are going to be speed of response time, and difficulty to move our software development environment to production.
+	\subsection{Risks}
+	Most risks are going to revolve around the security of our proposed system. This is solved by the implementation on ArcelorMittal's servers. ArcelorMittal has their own security team to ensure that the proposed system once moved to a production environment will be secure. In addition the data we are dealing with is not confidential.That being so, all code will be written in a secure manner, special attention will be paid to SQL queries, and SQLinjections.   
+	\subsection{Overview of System Models}
+	As the nature of this project is more Software oriented then hardware, developing models for system senors, actuators, interfaces or other principle level system components are not a main concern of Team 3. So as a result, no validation is needed. Similarly, issues involving control processes are not a concern. \\
+	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certian times when the application is operating. So that is one issue that has to be accomadated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  \\
 
 \section{High Level Languages}\label{highlevel}
 
@@ -149,12 +158,12 @@
 		\begin{minipage}{0.5\textwidth}
 			\centering
 			\includegraphics{StartPage.png}
-			\caption{\label{fig:login}Mocup of Start Screen}
+			\caption{\label{fig:login}Mock up of Start Screen}
 		\end{minipage}%real title space need to be here?
 		\begin{minipage}{0.5\textwidth}
 			\centering
 			\includegraphics{SplashPage.png}
-			\caption{\label{fig:splash}Mocup of splash screen}
+			\caption{\label{fig:splash}Mock up of splash screen}
 		\end{minipage}
 	\end{figure}
 	
@@ -170,10 +179,10 @@
 		\begin{minipage}[t]{0.5\textwidth}
 		\begin{itemize}
 			\item \textbf{Integrates With Sponsor IT}\\
-			Design Team 3s sponsor Arcelormittal USA uses a Microsoft windows baced infistrutur for its internal IT. This is significant because  most of the Internet and so most of the web frameworks are built around UNIX like operationg systems such as Linux or free BSD, While manny have been built to work in a windows environment we must deterin if that exists and if so how well.
+			Design Team 3's sponsor ArcelorMittal USA uses a Microsoft Windows based infastructure for their internal IT. This is significant because  most of the Internet and so most of the web frameworks are built around UNIX like operating systems such as Linux or free BSD, While many have been built to work in a windows environment we must deterin if that exists and if so how well.
 			
 			\item \textbf{Documentation}\\
-			One of the most important parts of any software library is the documentation, If a developer is required to dig thou source code to determine how a library works because there is no documentation which shows how to use it the amount of time which will be required will increse exponetoly and will result in code which is more prow to Constantine defects.
+			One of the most important parts of any software library is the documentation, If a developer is required to dig thou source code to determine how a library works because there is no documentation which shows how to use it the amount of time which will be required will increase exponentially and will result in code which is more prow to Constantine defects.
 				
 			\item \textbf{Ease Of use} \\
 			The complexity of a framework can be quite large and part of that can be in the langige the framework is writing in. this requires Design Team 3 to determine how difficult stranded tasks such as serving a web parge, and dynamically creating content. By looking at slandered task the overall difficulty of building the full web application will be.	
