--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -26,7 +26,7 @@
 \section{Background Research}\label{resarch}
 	There is background research that needs to be implemented to characterize primary hardware and software components that are needed for a successful project. \\
 	\subsection{Assessing Customer Needs}
-	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team 3 has picked our sponsor, Jim Lang, to be our primary point of contact for all things about the "super user". Jim clearly defines what ArcelorMittal needs, and how the user will be interacting with our system. Jim has made it easy to contact him by both a personal telephone number, and emailing at any time of day.  To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. In addition we can measure how much more accurate our system is over their previous design. \\ 
+	To help define what this research needs to be on, we need to think of the customer's needs, and ponder a person, or group of people that would know the ultimate needs of a user. Team 3 has picked our sponsor, to be our primary point of contact for all things about the "super user". Our sponsor clearly defines what ArcelorMittal needs, and how the user will be interacting with our system. Jim has made it easy to contact him by both a personal telephone number, and emailing at any time of day.  To assess our customers needs, we need to assess how much time we are saving the user by creating this new safety equipment system. In addition we can measure how much more accurate our system is over their previous design. \\ 
 	\subsection{Design Constraints}
 	With customer needs comes design constraints. One design constraint is time. We have been given one semester to work on this system. Another constraint is going to be cost. We have been given a budget of 500\$ to create this system.\\ 
 	\subsection{Feasibility of Designs}
@@ -37,7 +37,7 @@
 	Most risks are going to revolve around the security of our proposed system. This is solved by the implementation on ArcelorMittal's servers. ArcelorMittal has their own security team to ensure that the proposed system once moved to a production environment will be secure. In addition the data we are dealing with is not confidential.That being so, all code will be written in a secure manner, special attention will be paid to SQL queries, and SQLinjections.   
 	\subsection{Overview of System Models}
 	As the nature of this project is more Software oriented then hardware, developing models for system senors, actuators, interfaces or other principle level system components are not a main concern of Team 3. So as a result, no validation is needed. Similarly, issues involving control processes are not a concern. \\
-	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certian times when the application is operating. So that is one issue that has to be accomadated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  \\
+	However, Operating Systems at different interconnections distances is a concern, as our sponsor has a special requirement of no WIFI at certain times when the application is operating. So that is one issue that has to be accomodated. Another issue is going to be the storage on the Nexus 7 tablets. A usual tablet holds up to about 16GB of memory, so we need to make sure that our application is well within that limit.  \\
 
 \section{High Level Languages}\label{highlevel}
 
