--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -287,18 +287,18 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 	\subsection{Interconnectivity}\label{connect}
 		In the Interconnectivity step design team 3 will focus on building and testing connections between the baseline system, setup in \ref{cyc1}
 		\begin{itemize}
-			\item\textbf{Web speaks to Database: Seth}\\
+			\item\textbf{Web speaks to Database:} (Seth)\\
 			This step will consist of establishing a connection between the existing front-end of the admin website developed in 3.1 and the database that will allow the admin site to read from and write to the database.  This functionality will be used for retrieving and modifying information regarding the whereabouts and inspection status of safety equipment. 
 
 			
-			\item \textbf{Mobile speaks to Database: Kyle}\\
+			\item \textbf{Mobile speaks to Database:} (Kyle)\\
 			This development task will require establishing a connection between the Android mobile application and the database.  This will allow the mobile application to read information from the database to be displayed in the mobile application and to upload new inspection results from a local instance of the mobile application to the central database.
 
-			\item\textbf{Demonstrate to Sponsor: Team}\\
+			\item\textbf{Demonstrate to Sponsor:} (The Team)\\
 			 In this phase, we will demonstrate to the sponsor, either in person or via video, the ability of the website and mobile application to both read and post information to one common, central database to be used for storing inspection results and safety equipment details.
 
 			
-			\item\textbf{Mock ups and Wire Frames: Trevor}\\
+			\item\textbf{Mock ups and Wire Frames:} (Trevor)\\
 			The user interface of the mobile application and the admin website will be modified after receiving sponsor feedback regarding their current design to better suit the needs and wants of the customer.
 			
 			
@@ -307,18 +307,18 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 		\subsection{Preliminary Application Development}\label{dev1}
 		
 		\begin{itemize}
-			\item\textbf{Mobile App Development: Kyle}\\
+			\item\textbf{Mobile App Development:} (Kyle)\\
 		The implementation of the mobile application will be completed during this phase to produce a fully functioning prototype that is able to scan a barcode and pull information from the database related to that barcode.  The application will then be able to upload inspection results of each item over a WIFI network to the central database.\\		
-			\item \textbf{Web App Development: Seth and Ally}\\
+			\item \textbf{Web App Development:} (Seth and Ally)\\
 			The front-end and back-end of the admin website will be completed during this phase to produce an initial prototype.  The admin website will be able to receive input from a user regarding barcode and their related specifications and post that information to the database to be used by the mobile application.  This development is to be done in parallel with the mobile application.\\
 
-			\item\textbf{Database Refinements: Ian and Ally}\\
+			\item\textbf{Database Refinements:} (Ian and Ally)\\
 			The database will be continually refined throughout the development of the admin website and mobile application to address any issues discovered during this development phase.\\
 			
-			\item\textbf{Feedback: Team}\\
+			\item\textbf{Feedback:} (The Team)\\
 			The team will demonstrate the functioning prototype of both the mobile application and admin website to the sponsor and show how they integrate together to achieve a solution to the original problem.  The team will discuss the sponsor’s opinion regarding pros and cons of the implementation and create a plan for any modifications that the customer desires.\\
 			
-			\item\textbf{New Mock ups: Trevor}\\
+			\item\textbf{New Mock ups:} (Trevor)\\
 			Modification to the user interface design will be made if the sponsor desires.
 
 		\end{itemize}
@@ -326,15 +326,15 @@ The only cost incurred by the design team will be purchasing a Nexus 7 tablet. T
 	\subsection{Secondary Application Development}\label{dev2}
 		
 		\begin{itemize}
-			\item\textbf{Mobile App Development: Kyle}\\
+			\item\textbf{Mobile App Development:} (Kyle)\\
 			Any desired design modifications to the mobile application requested by the sponsor in 3.3 will be implemented and tested in this phase. \\
-			\item \textbf{Web App Development: Seth and Ally }\\
+			\item \textbf{Web App Development:} (Seth and Ally)\\
 			Any desired design modifications to the admin website requested by the sponsor in 3.3 will be implemented and tested in this phase. \\
 			
-			\item\textbf{Database Refinements: Ally}\\
+			\item\textbf{Database Refinements:} (Ally)\\
 			Any necessary database changes needed to accommodate modifications made to the mobile application or admin website will be implemented. \\
 			
-			\item\textbf{Make project shippable to sponsor: Team}\\
+			\item\textbf{Make project shippable to sponsor:} (The Team)\\
 			The mobile application will be compiled into an executable that can be uploaded on the sponsor’s tablets.  All passwords necessary to access the admin website will be given to the sponsor along with the source code for the website so that the website may be uploaded and hosted wherever the sponsor desires. 
 
 			
