--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -45,6 +45,9 @@
 	Team three has picked a bottom up approach. We have chosen to implement the lower levels first. This will be easier for the team three because we can test the database communication first. In addition when we are trying to display data on the user interface, we have an implemented API to make that connection for testing. This is going to be easier then just hard coding data which will not be as efficient.  We also set up the development enviornments for testing. 
 
 \section{High Level Languages}\label{highlevel}
+	\subsection{Langugages}
+	As for compilers on the Back End most things will be written in the programming language Python, which does not have a compiler. For the email service, SMTP python libraries will be used, as well as a couple web framework libraries. The web framework Libraries are provided by Django, which is based off of Python. \\
+	Android Application Development is written in Java which does have a compiler. On the admin side, Jquery, Twitter's Bootstrap will be used for web development.   \\ SOMEWHERE IN HERE REFER TO THE COMPARISIONS DOWN BELOW IN A DIFFERENT FIGURE
 
 
 \part{Technical}
@@ -152,7 +155,7 @@
 	
 	\subsection{Mobile Application}
 	Design team 3 will build a Mobile application for a tablet device which will allow a user to: download a database of safety equipment and locations to the mobile device to allow the user to operate with out access to the intranet, scan bar codes of locations and safety devices to allow the user to answer a seres of pass fail inspection questions, push question responses back to the database over the sponcers intranet.
-	\subsubsection{Mobil User Interface \& Experience}
+	\subsubsection{Mobile User Interface \& Experience}
 	Design Team three has comitiond the world renowned user interface and user expereance designer, Trevor Sabo to design a front end for both our mobile and web applications.\\
 	\\
 	Design Team three will create a user interface and expereance(UI/UX) to guide the safety inspector through the proses of an inspection Figure~\ref{fig:login} the user is prompted to enter three payroll number so that the data reverent to that user can be sync to the noble device and so that the inspection results can be logged under the correct employees name.
